[project]
name = "token-monitor"
version = "0.1.0"
description = "Monitor the usage"
authors = [
    {name = "nilofer",email = "niloferbano@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
]

[tool.poetry]
name = "token-monitor"
version = "0.1.0"
description = ""
authors = ["You"]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"
pytest-asyncio = ">=0.23,<1.0"
httpx = ">=0.27,<1.0"
ruff = ">=0.5,<1.0"
